# Motion-Capture-Analysis-of-Diabolo-Juggling

./: Final Poster.pptx  README.md
Code/: Blue Diabolo.stl  Diabolo Stick Holder.stl  README.md
Code/diabolo_motion_generator/: README.md  circular_accel_stick_motion_processed.csv  circular_accel_stick_motion_stick_poses.csv  compare_results.py  correct_output.csv  diabolo_motion_classes.py  diabolo_motion_generator.h  diabolo_motion_generator.py  output.csv  requirements.txt
Code/gzweb - custom/: README.md  gzgui.js  gzgui_revised.js  gzspawnmodel.js  index.html
Code/gzweb - custom/Site/: custom_embedded_scene.html  jeb_site.html
Code/jebcui-diabolo/: README.md  app.py  requirements.txt
Code/jebcui-diabolo/my_model_ll/: saved_model.pb
Code/jebcui-diabolo/templates/: index.html
Code/jebcui-syslab/: README.md  app.py  requirements.txt
Code/jebcui-syslab/templates/: index.html
Code/my_data_ML/: NN_training.ipynb  README.md  calculated_angular_speed.csv  output.csv  output_pitch.csv  preprocessing.ipynb  requirements.txt
Code/my_data_processing/: README.md  requirements.txt
Code/my_data_processing/20220302Full 6-more tilt/: angular_speed_and_offset.ipynb
Code/my_data_processing/20220302Full-tilt/: angular_speed.ipynb  (+3 more)
Code/project_gui/: CMakeLists.txt  DIABOLO_DATA.txt  GUIExampleSpawnWidget.cc  GUIExampleSpawnWidget.hh  README.md  custom.world  model_revolve_y.cc  model_revolve_z.cc  model_revolve_z_opp.cc  watcher.cc
Code/project_gui/models/side_neg/: model.sdf
Code/project_gui/models/side_pos/: model.config  model.sdf
Code/project_gui/models/stick_neg/: model.sdf
Code/project_gui/models/stick_pos/: model.config  model.sdf
Code/project_gui/models/testModel/: model.config  model.sdf
(+19 files in other folders)
